# MC2TexPatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dat_proc.cpp  dat_proc.hpp  fix_block.cpp  fix_block.hpp  fix_dxt.cpp  fix_dxt.hpp  main.cpp  mc2_exception.hpp
